--- a/server/package.json
+++ b/server/package.json
@@ -9,9 +9,14 @@
   },
   "devDependencies": {
     "@adonisjs/assembler": "^5.3.0",
+    "@typescript-eslint/eslint-plugin": "^5.8.0",
+    "@typescript-eslint/parser": "^5.8.0",
     "adonis-preset-ts": "^2.1.0",
+    "eslint": "^6.5.1",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-plugin-import": "^2.18.2",
     "pino-pretty": "^7.3.0",
-    "typescript": "~4.5",
+    "typescript": "^4.5.4",
     "youch": "^3.0.0",
     "youch-terminal": "^2.0.0"
   },
