--- a/client/package.json
+++ b/client/package.json
@@ -9,10 +9,15 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@nuxtjs/axios": "^5.13.6",
+    "bulmaswatch": "^0.8.1",
+    "copy-to-clipboard": "^3.3.1",
     "core-js": "^3.19.3",
     "nuxt": "^2.15.8",
     "nuxt-buefy": "^0.4.13",
+    "timeago.js": "^4.0.2",
     "vue": "^2.6.14",
+    "vue-mugen-scroll": "^0.2.6",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
     "webpack": "^4.46.0"
