--- a/server/.env.example
+++ b/server/.env.example
@@ -10,3 +10,6 @@ PG_PORT=5432
 PG_USER=postgres
 PG_PASSWORD=
 PG_DB_NAME=nugget
+TWITTER_CLIENT_ID=clientId
+TWITTER_CLIENT_SECRET=clientSecret
+SESSION_DRIVER=cookie
