--- a/server/package.json
+++ b/server/package.json
@@ -21,14 +21,19 @@
     "youch-terminal": "^2.0.0"
   },
   "dependencies": {
+    "@adonisjs/ally": "^4.1.1",
+    "@adonisjs/auth": "^8.0.10",
     "@adonisjs/core": "^5.4.0",
     "@adonisjs/lucid": "^16.3.2",
     "@adonisjs/repl": "^3.1.0",
+    "@adonisjs/session": "^6.1.2",
     "lodash": "^4.17.21",
     "luxon": "^2.2.0",
     "pg": "^8.7.1",
     "proxy-addr": "^2.0.7",
     "reflect-metadata": "^0.1.13",
-    "source-map-support": "^0.5.21"
+    "source-map-support": "^0.5.21",
+    "text-ellipsis": "^1.0.3",
+    "twitter-api-v2": "^1.8.0"
   }
 }
