--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
     "bulmaswatch": "^0.8.1",
+    "cookie": "^0.4.1",
     "copy-to-clipboard": "^3.3.1",
     "core-js": "^3.19.3",
     "nuxt": "^2.15.8",
